# rtp2httpd

./: .clang-format  .clangd  .gitattributes  .gitignore  AGENTS.md  AUTHORS  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile.am  README  README.en.md  README.md  TESTING.md  biome.json  build-static.sh  cn-fcc-collection.md  configure.ac  context7.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  rtp2httpd.conf  rtp2httpd.pc.in  tsconfig.json
.agents/skills/build-run/: SKILL.md
.agents/skills/e2e/: SKILL.md
.agents/skills/sync-fcc-ip-docs/: SKILL.md
.agents/skills/translate-docs-zh-en/: SKILL.md
.claude/agent-memory/doc-translator-zh-en/: MEMORY.md
.claude/agent-memory/fcc-ip-doc-updater/: MEMORY.md
.claude/agents/: doc-translator-zh-en.md  fcc-ip-doc-updater.md
.claude/skills/build-run/: SKILL.md
.claude/skills/e2e/: SKILL.md
.github/workflows/: azure-static-web-apps-deploy.yaml  azure-static-web-apps-deploy.yml  azure-static-web-apps-thankful-water-0a297bf00.yml  copilot-help.yaml  documentation-website.yaml  e2e-tests.yaml  e2e-tests.yml  lint.yaml  release-docker.yaml  release-ipk.yaml  release-static-bin.yaml  release.yaml  submit-to-eco.yaml  submit-to-ecosystem.yaml  submit-to-istore.yaml
docs/: benchmark.md  cn-fcc-collection.md  configuration.md  fcc-setup.md  index.md  installation.md  m3u-integration.md  public-access.md  quick-start.md  rtsp-time-processing.md  time-processing.md  url-formats.md  video-snapshot.md  web-player.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts
docs/en/: benchmark.md  cn-fcc-collection.md  configuration.md  fcc-setup.md  index.md  installation.md  m3u-integration.md  quick-start.md  rtsp-time-processing.md  url-formats.md  video-snapshot.md
docs/en/guide/: access-log.md  fcc-setup.md  installation.md  m3u-integration.md  public-access.md  quick-start.md  time-processing.md  url-formats.md  video-snapshot.md  web-player.md
docs/en/reference/: benchmark.md  cn-fcc-collection.md  configuration.md  related-resources.md
docs/guide/: access-log.md  fcc-setup.md  index.md  installation.md  m3u-integration.md  public-access.md  quick-start.md  time-processing.md  url-formats.md  video-snapshot.md  web-player.md
docs/public/: staticwebapp.config.json
docs/reference/: benchmark.md  cn-fcc-collection.md  configuration.md  related-resources.md
e2e/: README.md  conftest.py  test_access_log.py  test_auth.py  test_config.py  test_epg.py  test_error.py  test_fcc.py  test_flow_control.py  test_http_proxy.py  test_http_proxy_m3u_rewrite.py  test_http_proxy_seek.py  test_http_proxy_streaming.py  test_http_proxy_time_placeholders.py  test_ipv6.py  test_m3u.py  test_multicast.py  test_pages.py  test_rtsp_content_base.py  test_rtsp_misc.py  test_rtsp_seek.py  test_rtsp_seek_mode.py  test_rtsp_stun.py  test_rtsp_transport.py  test_unix_socket.py  test_url_template.py  test_url_template_http.py  test_url_template_m3u.py  test_url_template_placeholders.py  test_url_template_rtsp.py  test_zerocopy.py
e2e/helpers/: __init__.py  config.py  constants.py  http.py  mock_fcc.py  mock_http.py  mock_rtsp.py  mock_stun.py  ports.py  r2h_process.py  rtp.py
ikuai-support/: build-rtp2httpd-ipkg.sh
ikuai-support/rtp2httpd/: changelog  manifest.json  readme
ikuai-support/rtp2httpd/app/: .env  environment  option.json
ikuai-support/rtp2httpd/scripts/: POST_INST.sh  POST_UNINST.sh  PRE_INST.sh  PRE_UNINST.sh  start.sh  stop.sh
openwrt-support/: install.sh
openwrt-support/luci-app-rtp2httpd/: Makefile  Makefile.versioned
openwrt-support/rtp2httpd/: Makefile  Makefile.versioned  src
openwrt-support/rtp2httpd/files/: rtp2httpd.conf  rtp2httpd.init
scripts/: benchmark.sh  build-ikuai-ipkg.sh  build-rtp2httpd-ipkg.sh  build-static.sh  embed-dist.js  embed-page.js  embed-status-page.js  embed_status_page.js  generate-versioned-makefiles.sh  install-openwrt.sh  run-e2e.sh
src/: Makefile.am  access_log.c  access_log.h  buffer_config.h  buffer_pool.c  buffer_pool.h  configuration.c  configuration.h  connection.c  connection.h  embedded_web.c  embedded_web.h  embedded_web_data.h  epg.c  epg.h  fcc.c  fcc.h  fcc_huawei.c  fcc_huawei.h  fcc_telecom.c  fcc_telecom.h  hashmap.c  hashmap.h  http.c  http.h  http_fetch.c  http_fetch.h  http_proxy.c  http_proxy.h  http_proxy_rewrite.c  http_proxy_rewrite.h  httpclients.c  httpclients.h  m3u.c  m3u.h  md5.c  md5.h  multicast.c  multicast.h  platform_compat.h  (+42 more)
tests/: Makefile.am  check_fcc.c  check_http.c  check_httpclients.c  check_rtp.c  check_rtsp.c  check_rtsp_integration.c  check_rtsp_logic.c  check_status.c  check_stream.c  check_timezone.c  mock_rtsp.h  test_invariant_rtp.c  test_mocks.c  test_rtsp_mocks.c
tools/: README.md  benchmark.sh  main.py  perf_benchmark.py  pyproject.toml  stress_test.py
tools/devlab/: README.md  devlab.py
tools/e2e/: conftest.py  helpers.py  run.sh  test_auth.py  test_config.py  test_error.py  test_fcc.py  test_http_proxy.py  test_m3u.py  test_multicast.py  test_pages.py  test_rtsp.py  test_rtsp_content_base.py  test_rtsp_misc.py  test_rtsp_seek.py  test_rtsp_stun.py  test_rtsp_transport.py  test_zerocopy.py
tools/e2e/helpers/: __init__.py  constants.py  mock_http.py  mock_rtsp.py  ports.py  r2h_process.py  rtp.py
tools/fixtures/: fec_sample.m3u  fec_sample.pcapng  fec_sample2.m3u  fec_sample2.pcapng  sample.m3u
tools/stress-test/: README.md  stress_test.py
tools/stress-test-conf/: tvgate-config.yaml
tools/udp-replay/: README.md  udp_replay.py
web-ui/: .prettierignore  biome.json  eslint.config.js  index.html  package-lock.json  package.json  player.html  pnpm-lock.yaml  pnpm-workspace.yaml  status.html  tailwind.config.ts  tsconfig.json  vite.config.ts
web-ui/public/assets/: manifest-player.json
web-ui/src/: App.tsx  i18n.ts  index.css  types.ts  vite-env.d.ts
web-ui/src/components/: icons.tsx
web-ui/src/hooks/: use-bandwidth-unit.ts  use-locale.ts  use-persisted-enum.ts  use-player-translation.ts  use-soft-audio-decoder.ts  use-sse.ts  (+4 more)
wireshark-support/: README.md  fcc_dissector.lua
(+115 files in other folders)
