[project]
name = "rtp2httpd"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "scapy>=2.7.0",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "basedpyright>=1.39.3",
    "clang-format>=22.1.4",
]

[tool.ruff]
line-length = 120

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["e2e"]
markers = [
    "multicast: requires multicast on loopback",
    "rtsp: requires mock RTSP server",
    "http_proxy: requires mock HTTP upstream",
    "slow: tests that take longer",
]
